--- a/src/Components/Container/Container.scss
+++ b/src/Components/Container/Container.scss
@@ -1,6 +1,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: start;
     padding-left: 20px;
 }
