--- a/src/Components/PriceFilter/PriceFilter.scss
+++ b/src/Components/PriceFilter/PriceFilter.scss
@@ -1,34 +1,55 @@
-button {
-  padding: 15px 20px;
-  font-family: 'Open Sans';
-  font-size: 12px;
-  line-height: 20px;
-  letter-spacing: 0.5px;
-  text-align: center;
-  border: 1px solid #DFE5EC;
-  background: #FFFFFF;
-  width: 168px;
-  height: 50px;
-}
-
-.cheap,
-.faster {
+.price-filter__item {
+    padding: 15px;
+    font-family: 'Open Sans';
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    text-align: center;
+    border: 1px solid #DFE5EC;
+    background: #FFFFFF;
+    width: 136px;
+    display: block;
+  }
+  
+  .price-filter__list {
+    list-style-type: none;
+    display: flex;
+    padding-left: 0px;
+    margin-top: 0px;
+  }
+  
+  .cheap,
+  .faster {
     border-right: none;
-}
-
-.cheap {
+  }
+  
+  .cheap {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-}
-
-.optimal {
+  }
+  
+  .optimal {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-}
-
-
-
-.active {
+  }
+  
+  .active {
     background-color: #2196F3;
     color: #FFFFFF;
-}
+  }
+  
+  .price-filter {
+    display: flex;
+  }
+  
+  .price-filter__item input {
+    appearance: none;
+    -webkit-appearance: none;
+  }
+  
+  .price-filter__item input:focus + label {
+    outline: 2px solid #2196F3;
+    outline-offset: 2px;
+    border-radius: 5px;
+  }
+  
